--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.tanim.ccepedia"
         minSdk 24
         targetSdk 35
-        versionCode 3
-        versionName '2.1'
+        versionCode 4
+        versionName '2.5'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
@@ -35,28 +35,38 @@ android {
 dependencies {
 
     // Firebase BOM for managing Firebase SDK versions
-    implementation(platform('com.google.firebase:firebase-bom:33.14.0'))
+    implementation(platform('com.google.firebase:firebase-bom:34.2.0'))
 
     // Core dependencies
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.13.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
 
     // Firebase dependencies
-    implementation 'com.google.firebase:firebase-messaging:24.1.1'
-    implementation 'com.google.firebase:firebase-auth:23.2.1'
-    implementation 'com.google.firebase:firebase-firestore:25.1.4'
-    implementation 'com.google.firebase:firebase-storage:21.0.2'
+    implementation 'com.google.firebase:firebase-messaging:25.0.0'
+    implementation 'com.google.firebase:firebase-auth:24.0.1'
+    implementation 'com.google.firebase:firebase-firestore:26.0.0'
+    implementation 'com.google.firebase:firebase-storage:22.0.0'
 
     // Additional dependencies
     implementation 'androidx.activity:activity:1.10.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation 'com.github.barteksc:AndroidPdfViewer:3.1.0-beta.1'
+
+    //New
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 
 }
